templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
  labels:
    app: strapi-service
spec:
  type: NodePort
  ports:
  - nodePort: 30002  # Vous pouvez changer le nodePort si nécessaire
    port: 80
    targetPort: 1337  # Port sur lequel Strapi est exposé
  selector:
    app: strapi



# apiVersion: v1
# kind: Service
# metadata:
#   name: strapi-service
#   labels:
#     app: strapi-service
# spec:
#     type: NodePort
#     selector:
#         app: strapi
#     ports:
#      - protocol: TCP
#        port: 1337
#        targetPort: 1337
#        nodePort: 30002  # vous pouvez choisir un autre numéro de port si celui-ci est déjà utilisé
