templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strapi-service  # Assurez-vous que cela correspond au nom de votre service Strapi
                port:
                  number: 1337  # Assurez-vous que cela correspond au port de votre service Strapi
